# celeris

./: Cargo.toml  README.md
src/: lib.rs  logger.rs  main.rs
src/css/: mod.rs  parser.rs  properties.rs  rules.rs  selector.rs  style.rs  values.rs
src/css/test_cases/: mod.rs
src/css/test_cases/failure/: complex_selectors.css  edge_cases.css  malformed.css
src/css/test_cases/success/: attribute_selectors.css  bootstrap_utilities.css  flexbox.css  google_css.css  grid.css  media_queries.css  pseudo_selectors.css  tailwind_basic.css
src/dom/: mod.rs
src/html/: entities.rs  mod.rs  parser.rs  tokenizer.rs
src/javascript/: ast.rs  dom_bridge.rs  mod.rs  parser.rs  runtime.rs  tokenizer.rs  value.rs
src/networking/: error.rs  http.rs  mod.rs  pool.rs  tcp.rs  uri.rs  user_agent.rs
src/rendering/: layout.rs  mod.rs  painter.rs  tree.rs
src/rendering/gui/: address_bar.rs  app.rs  content_view.rs  dev_panel.rs  mod.rs  skia.rs  toolbar.rs  window.rs
