[package]
name = "celeris"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.22"
rustls = "0.23.20"
tokio = { version = "1.40", features = ["full", "macros", "rt-multi-thread"] }
tokio-rustls = "0.26.1"
webpki-roots = "0.26.7"
# gzip/deflate decompression for HTTP responses
flate2 = "1.0"
gpui = { version ="0.2.2", optional = true }

[lints.clippy]
unwrap_used = "deny"
cognitive_complexity = "deny"

[profile.release]
lto = 'fat'
opt-level = 3

[features]
default = []
gui = ["dep:gpui"]